fix(notes): add overflow scroll to saved notes

--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -4,7 +4,7 @@ section {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.45);
+  background: rgba(0, 0, 0, 0.8);
   opacity: 1;
   overflow-y: hidden;
   transform: translateY(0);
@@ -44,6 +44,11 @@ textarea {
   resize: none;
   border: none;
   background-color: #f5f5f5;
+}
+
+.noteField {
+  max-height: 20rem;
+  overflow-y: scroll;
 }
 
 .btnWrapper {
